--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,1 +1,13 @@
 project_id = "fhctcakemcchymjmeuie"
+
+[functions]
+
+[functions.send-whatsapp-reminders]
+# This function is invoked by the scheduler; no JWT verification needed
+verify_jwt = false
+
+[[functions.send-whatsapp-reminders.schedules]]
+# Every 5 minutes
+cron = "*/5 * * * *"
+# Root path of the function handler
+endpoint = "/"
